src/test/deca/syntax/valid/homemade/empty_class_with_extend.deca
// Description :
//      Various boolean operations
//
// Results :
//      true
//      true
//      true
//      false
//      true
//      false
//      false
//      true
//      false
//
// History :
//      created on 9/01/2020

class ouaip extends ouaipp{
}

{
    println("nice");
}