src/test/deca/syntax/invalid/homemade/unclosed_main.deca
// Description :
//      Empty program
//
// Results :
//       missing '}' at '<EOF>'
//
// History :
//      created on 9/01/2020

{
    if (true) {
        println("ok");
    } else if (true) {
        println("should not get there");
    } else {
        println("this should definitely not show up");
    }


    if (true) {
        println("ok");
    }

    if (false) {}
    else {
        println("ok");
    }
